<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/lastUpdateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_update"
            android:gravity="right"/>
        <TextView
            android:id="@+id/streetTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/main_text_size"
            android:text="@string/street"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:gravity="left" />

        <TextView
            android:id="@+id/cityTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/second_row_text_size"
            android:text="@string/city"
            android:gravity="left" />

        <TextView
            android:id="@+id/additionalDescriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/second_row_text_size"
            android:text="@string/additional_description"
            android:gravity="left" />



    </LinearLayout>
    <Button
        android:id="@+id/showMoreDays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_more_days"
        android:background="@color/blackish"
        android:textColor="@color/white"/>
</LinearLayout>